objects/Monthly_Maintenance__c.object
<CustomObject>
    <description>Recurring Monthly Maintenance tasks for Advocates, OMS, and SEO.</description>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <description>This field pulls the Advocate value from the Webid.</description>
        <formula>WebID__r.Account_Advocate__r.FirstName &amp; &quot; &quot; &amp; WebID__r.Account_Advocate__r.LastName &amp; 
IF( isblank(WebID__r.Account_Advocate__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.Account_Advocate__r.Extension )</formula>
        <label>Account Advocate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_for_Hub_Site__c</fullName>
        <formula>WebID_for_Hub_Site__r.Account__r.Name</formula>
        <label>Account for Hub Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Due_Date__c</fullName>
        <inlineHelpText>This is the date you would like to complete your Action by.</inlineHelpText>
        <label>Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>This field is to be maintained through bulk uploads and stored procedures.  Default for users creating records is &quot;User Generated.&quot;  The stored procedure default should be &quot;Monthly Action.&quot;  Any bulk uploads for program call downs should be coded as &quot;Focus Area.&quot;</description>
        <inlineHelpText>Please do not change this field from the default.</inlineHelpText>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>User Generated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Area Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Area Single Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actions_taken_toward_meeting_your_goal__c</fullName>
        <label>Actions taken toward meeting your goal</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ad_Review2__c</fullName>
        <formula>WebID__r.Ad_Review2__c</formula>
        <label>Ad Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review3__c</fullName>
        <formula>WebID__r.Ad_Review3__c</formula>
        <label>Ad Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review__c</fullName>
        <formula>WebID__r.Ad_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Attempts__c</fullName>
        <inlineHelpText>Enter number of times you have attempted to contact any additional contact.  This field is for the use of the record owner to assist with workflow only and is not used for reporting.</inlineHelpText>
        <label>Additional Contact Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Status__c</fullName>
        <label>Additional Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Directories_Submitted_to__c</fullName>
        <inlineHelpText>What directories was site submitted to?</inlineHelpText>
        <label>Additional Directories Submitted to</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Resource_Is_Me__c</fullName>
        <formula>IF ( $User.Id =  Additional_Resource__c , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Additional Resource Is Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advocate_MM_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>This link will open the Advocate&apos;s MM record for the same month.</inlineHelpText>
        <label>Advocate MM Link</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (Advocate MM Link)</relationshipLabel>
        <relationshipName>Monthly_Maintenance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Focus_Areas__c</fullName>
        <formula>HYPERLINK(&quot;/00O40000003CJTY&quot;, &quot;All&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Focus Areas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Tags_Up_to_Date__c</fullName>
        <label>Alt Tags Up to Date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_GEO_s__c</fullName>
        <formula>WebID__r.Approved_GEO_s__c</formula>
        <inlineHelpText>Shows value entered on WebId in the field of the same name.</inlineHelpText>
        <label>Dealer Requested GEOs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code__c</fullName>
        <description>This pulls the BAC/Dealer Code from the same named field in the WebId.  This is in turn used in the OOS button.</description>
        <formula>WebID__r.BAC_Dealer_Code__c</formula>
        <label>BAC/Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Map_Activity_Status__c</fullName>
        <label>Bing Map Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bing_Map_Activity__c</fullName>
        <inlineHelpText>Please note activity performed on the Bing Map listing. No notes in this field indicates no activity was performed.</inlineHelpText>
        <label>Bing Map Activity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bing_Map_Ranking__c</fullName>
        <inlineHelpText>Enter rankings using Dealer Name search and Bing.</inlineHelpText>
        <label>Bing Map Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bing_Webmaster_Tools_Submitted_To__c</fullName>
        <formula>Text(WebID__r.Bing_Webmaster_Tools_Submitted_To__c)</formula>
        <inlineHelpText>Shows value entered on WebId in the field of the same name</inlineHelpText>
        <label>Bing Webmaster Tools Submitted To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing__c</fullName>
        <label>Bing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMR_Sent__c</fullName>
        <description>This field is updated by Service ops when the automated CMR is sent to recipients.</description>
        <label>CMR Sent</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempts__c</fullName>
        <label>Call Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status_Calc__c</fullName>
        <description>This field is not intended to display on a page layout.  This formula field is only intended to influence the Account Plan rollup field &quot;Calls Needed This Month.&quot;</description>
        <formula>IF( ISPICKVAL(Call_Status__c,&quot;Completed&quot;),0,IF(ISPICKVAL(Call_Status__c, &quot;2 Calls Remaining&quot;),2,IF(ISPICKVAL(Call_Status__c, &quot;1 Call Remaining&quot;),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Status Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <color>#E27001</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 Calls Remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Call Remaining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For DAP MM&apos;s, select the relevant DAP Campaign</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Reputation Management Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics, Reporting, and Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Response Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Business Listing Optimization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Search_Activity_Status__c</fullName>
        <label>City Search Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Search_Activity__c</fullName>
        <inlineHelpText>Please note activity performed on the City Search listing. No notes in this field indicates no activity was performed.</inlineHelpText>
        <label>City Search Activity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City_Search_Ranking__c</fullName>
        <inlineHelpText>Enter rankings using Dealer Name search using Google.</inlineHelpText>
        <label>City Search Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClonnedRecordUniqueID__c</fullName>
        <description>Clonned Record Unique ID</description>
        <label>ClonnedRecordUniqueID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is updated when the user sets the Monthly Maintenance record Open Status to N/A, Completed, or Cancelled.</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monthly_Maintenance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>This is updated when the user sets the Monthly Maintenance record Open Status to N/A, Completed, or Cancelled.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conduct_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Review Dealer Goals
- Discuss Industry Current Events
- Present optimization recommendations and gather dealer input
- Review Actions &amp; Results</inlineHelpText>
        <label>Conduct Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_with_Other_Specialists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Consult with SEO, OMS, and Email Marketing
- Include SEO, OMS, and Email Marketing on call, as appropriate</inlineHelpText>
        <label>Consult with Other Specialists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Pages_Personalized_Forms__c</fullName>
        <label>Contact Pages - Personalized Forms</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Pages_Phone_Tracking_Number__c</fullName>
        <label>Contact Pages - Phone Tracking Number</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contacts_CMR_Sent_to__c</fullName>
        <description>This will show all contacts a CMR was sent to.</description>
        <label>Contacts CMR Sent to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Calls_to_Action_Lead_Generat__c</fullName>
        <label>Content - Call to Action/Lead Generation</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Personalized_Content_Shown__c</fullName>
        <label>Content - Personalized Content Shown</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Specials_Pages__c</fullName>
        <label>Content - Specials Pages</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAP_Dissatisfaction_Reason__c</fullName>
        <label>DAP Dissatisfaction Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cost of DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t see the value in DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t get enough leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DAP_Email_Marketing_Specialist__c</fullName>
        <description>This field pulls the value from the Webid.</description>
        <formula>WebID__r.OwnerMktg_Specialist_lookup__r.FirstName  &amp;&quot; &quot;&amp;  WebID__r.OwnerMktg_Specialist_lookup__r.LastName &amp; 
IF( isblank(WebID__r.OwnerMktg_Specialist_lookup__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.OwnerMktg_Specialist_lookup__r.Extension )</formula>
        <inlineHelpText>DAP Email relationship with Dealer is handled by the OMS.  This lists the DAP Email specialist only.  If the Account has onstation please use the WebId list to see the onstation Email Marketing specialist.</inlineHelpText>
        <label>DAP Email Marketing Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAP_Enrollment_Status__c</fullName>
        <inlineHelpText>This field shows if the WebId is enrolled in DAP or DAP + Email.</inlineHelpText>
        <label>DAP Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled in DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled in DAP + Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAP_Health_Comments__c</fullName>
        <label>DAP Health Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DAP_Health__c</fullName>
        <inlineHelpText>• Unknown - Only used when we haven’t engaged the dealer
• Very satisfied - Promoter of Cobalt and/or service
• Satisfied - Seem happy with the service
• Dissatisfied - Cobalt detractor, complaining about the service, an at risk dealer</inlineHelpText>
        <label>DAP Health</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAP_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label># DAP Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAP__c</fullName>
        <description>EMS Monthly Maintenance -  DAP Campaigns</description>
        <inlineHelpText>Campaigns that start with 04- will mark this as sent</inlineHelpText>
        <label>DAP</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAPr_Review_Call__c</fullName>
        <inlineHelpText>If the WebId has a DAP report available this field will tell you that a DAPr call is needed.  To check if reporting considers the DAP call completed please use the Call Status field.</inlineHelpText>
        <label>DAPr Review Call</label>
        <picklist>
            <picklistValues>
                <fullName>DAPr Call Not Needed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DAPr Call Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAS_Data_Last_Updated__c</fullName>
        <formula>WebID__r.DAS_Data_Last_Updated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAS Data Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends2__c</fullName>
        <formula>WebID__r.DA_Performance_Trends2__c</formula>
        <label>DA Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends3__c</fullName>
        <formula>WebID__r.DA_Performance_Trends3__c</formula>
        <label>DA Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends__c</fullName>
        <formula>WebID__r.DA_Performance_Trends__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA_or_Radius_Targeted_Details__c</fullName>
        <formula>WebID__r.DMA_or_Radius_Targeted_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMA or Radius Targeted Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Call_Scheduled__c</fullName>
        <label>Date Call Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Approval__c</fullName>
        <label>Dealer Response</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback/Updates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_DAP_Goals__c</fullName>
        <formula>WebID__r.OMS_DAP_Goals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer DAP Goals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Goals__c</fullName>
        <formula>WebID__r.Dealer_Goals_SEO__c</formula>
        <label>Dealer Goals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <formula>Account__r.Dealer_Group_Name2__c</formula>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Logo__c</fullName>
        <formula>TEXT( WebID__r.Dealer_Logo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Results_of_Proactive_Steps__c</fullName>
        <inlineHelpText>Briefly explain what result you are hoping to see from the proactive step you are taking.</inlineHelpText>
        <label>Desired Results of Proactive Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Solutions_Manager__c</fullName>
        <description>This field pulls the value from the Account.</description>
        <formula>Account__r.Designated_DSM__r.FirstName &amp;&quot; &quot;&amp; Account__r.Designated_DSM__r.LastName &amp; &quot; &quot;&amp;
Account__r.Designated_DSM__r.Phone</formula>
        <label>Digital Solutions Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Automatically defaulted to the last day of the month.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_MM_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>This link will open the DAP Email Marketing Specialist’s MM record for the same month. MM&apos;s for onstation WebId&apos;s need to be accessed through the onstation Webid.</inlineHelpText>
        <label>DAP EMS MM Link</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (EMS MM Link)</relationshipLabel>
        <relationshipName>Monthly_Maintenance5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Password__c</fullName>
        <formula>WebID__r.Password__c</formula>
        <label>EM Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_User_Name__c</fullName>
        <formula>WebID__r.User_Name__c</formula>
        <label>EM User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Attempts__c</fullName>
        <inlineHelpText>Log a Call with type of &quot;Email&quot; and all Emails attached to this record will be counted as email attempts. This will update nightly.</inlineHelpText>
        <label>Email Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Specialist__c</fullName>
        <description>This field pulls the value from the Webid.</description>
        <formula>WebID__r.OwnerMktg_Specialist_lookup__r.FirstName &amp;&quot; &quot;&amp; WebID__r.OwnerMktg_Specialist_lookup__r.LastName &amp; 
IF( isblank(WebID__r.OwnerMktg_Specialist_lookup__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.OwnerMktg_Specialist_lookup__r.Extension )</formula>
        <label>Email Marketing Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <label>Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>Not Engaged</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged - PPC/Other</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged DP/DM</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged - DP/GM</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Example_Field__c</fullName>
        <label>Example Field</label>
        <picklist>
            <picklistValues>
                <fullName>Enrollment Call – 2 attempts or enrollment needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Call – 1 attempt or enrollment needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Enrolled – Sales Ops Gathering DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Not Engaging in Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gather DI Info – 2 attempts needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gather DI Info – 1 attempt needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gather DI Info – Set DI Status to Escalated or Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook_Twitter_Highlights__c</fullName>
        <label>Facebook &amp; Twitter Highlights</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focus_Area_Recommended_Timing__c</fullName>
        <label>Focus Area Recommended Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <description>This field is not intended to be displayed on a page layout.  This should be populated by bulk feeds to ensure that the integrity of the data is maintained.  The text field should exactly map to whatever is in the Product/Project field.  If the two do not match, the call will not count as logged and people will be angry.</description>
        <label>Focus Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Google_Places_Activity_Status__c</fullName>
        <label>Google Places Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Places_Activity__c</fullName>
        <inlineHelpText>Please note activity performed on the Google Places listing. No notes in this field indicates no activity was performed.</inlineHelpText>
        <label>Google Places Activity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Places_Ranking__c</fullName>
        <inlineHelpText>Enter rankings using Dealer Name search using Google.</inlineHelpText>
        <label>Google Places Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_Tags_Still_in_Place__c</fullName>
        <label>H Tags Still in Place?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>